--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,16 +4,66 @@
     <head>
         <title>Coronavirus Tracker</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+            crossorigin="anonymous"
+        />
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+            crossorigin="anonymous"
+        ></script>
+        <script>
+            let toastOptions = { animation: true, autohide: false, delay: 2000, };
+
+            function Toast() {
+                let toastHTMLElement =
+                    document.getElementById("data-source-toast");
+                let toastElement = new bootstrap.Toast(
+                    toastHTMLElement,
+                    toastOptions
+                );
+                toastElement.show();
+            }
+        </script>
 
         <style>
+            .close-btn {
+                border-radius: 4px;
+
+                margin-left: auto;
+            }
+
+            .toast {
+                background-color: #aefaf5;
+                font-size: 1.2rem;
+                width: 60%;
+
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                transform: translateY(-2.5em);
+            }
+
+            .toast-body {
+                font-weight: bold;
+            }
+
+            .container {
+                font-size: 18px;
+
+                margin-top: 20px;
+                margin-bottom: 20px;
+            }
+
             .total-data {
-                background-color: #AEFAF5;
+                background-color: #aefaf5;
                 border-radius: 2px;
 
                 padding: 5px;
             }
-
         </style>
     </head>
 
@@ -21,31 +71,87 @@
         <div class="container">
             <div class="top text-center">
                 <h1>Coronavirus Tracker</h1>
-                <p>This applications is reporting the global coronavirus cases:</p>
+                <p>
+                    This web application is reporting the global Coronavirus
+                    cases:
+                </p>
 
                 <div class="total-data jumbotron">
                     <h1 class="display-4" th:text="${totalReportedCases}"></h1>
-                    <p class="lead">Total number of reported coronavirus cases</p>
+                    <p class="lead">
+                        Total number of reported Coronavirus cases
+                    </p>
 
-                    <hr class="my-4">
+                    <hr class="my-4" />
 
                     <p>
-                        <span>New cases reported yesterday:</span>
+                        <span>
+                            New cases reported yesterday (
+                            <span th:text="${lastAvailableCovidDataDate}"></span>
+                            ):
+                        </span>
+
                         <span th:text="${totalDailyCovidCount}"></span>
                     </p>
+
+                    <button class="btn btn-info" onclick="Toast()">
+                        Data source
+                    </button>
+
+                    <div
+                        class="toast"
+                        id="data-source-toast"
+                        role="alert"
+                        aria-live="assertive"
+                        aria-atomic="true"
+                    >
+                        <div class="toast-header">
+                            <strong>Data source</strong>
+
+                            <button
+                                type="button"
+                                class="close-btn btn-danger"
+                                data-bs-dismiss="toast"
+                                aria-label="Close"
+                            >
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+
+                        <div class="toast-body">
+                            Data source:
+                            <a
+                                href="https://github.com/CSSEGISandData/COVID-19"
+                            >
+                                Johns Hopkins University
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
 
             <table class="table">
                 <tr>
                     <th>Country</th>
-                    <th>Total coronavirus cases</th>
-                    <th>Daily coronavirus count</th>
+                    <th>Total Coronavirus cases</th>
+                    <th>
+                        Daily Coronavirus count (
+                        <span th:text="${lastAvailableCovidDataDate}"></span>
+                        )
+                    </th>
                 </tr>
                 <tr th:each="countryData : ${coronavirusData.entrySet()}">
                     <td th:text="${countryData.getValue().getCountry()}"></td>
-                    <td th:text="${countryData.getValue().getTotalCovidCountString()}">0</td>
-                    <td th:text="${countryData.getValue().getDailyCovidCountString()}">0</td>
+                    <td
+                        th:text="${countryData.getValue().getTotalCovidCountString()}"
+                    >
+                        0
+                    </td>
+                    <td
+                        th:text="${countryData.getValue().getDailyCovidCountString()}"
+                    >
+                        0
+                    </td>
                 </tr>
             </table>
         </div>
